# rocopath

./: .gitignore  README.md  pyproject.toml  rocopath.spec
assets/data/: .gitkeep
assets/ui/: main.ui
scripts/: build.py  build_ui.py
src/rocopath/: config.py  main.py
src/rocopath/core/: logger.py  map_controller.py  npc_loader.py  route_planner.py
src/rocopath/exporters/: compatible.py  compatible_new.py  npc_imp_exp.py
src/rocopath/models/: __init__.py  base.py  npc.py  path_point.py
src/rocopath/ui/: __init__.py  export_import_panel.py  filter_panel.py  main_window.py  map_scene.py  map_view.py  npc_point_item.py  path_point_item.py  route_planning_manager.py  ui_main.py
src/rocopath/utils/: __init__.py  image.py  map.py
tests/utils/: test_map.py
